MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_Default__mdt/mfg_Service_Term_Default__mdt.object-meta.xml
<CustomObject>
    <description>Default values for Parts Coverage, Labor Coverage, Expense Coverage, Service Unit, and Service Duration fields on Service Term records</description>
    <label>Service Term Default</label>
    <pluralLabel>Service Term Defaults</pluralLabel>
</CustomObject>