MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_Default__mdt/fields/mfg_Parts_Coverage__c.field-meta.xml
<CustomField>
    <fullName>mfg_Parts_Coverage__c</fullName>
    <label>Parts Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>