MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_Default__mdt/fields/mfg_Service_Duration__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Duration__c</fullName>
    <label>Service Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>