MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_Default__mdt/fields/mfg_Service_Unit__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Unit__c</fullName>
    <label>Service Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>